# rust-key-paths

./: .gitignore  ADVANCED_TYPES_EXAMPLES.md  ASYNC_LOCK_IMPLEMENTATION.md  CASEPATHS_ENHANCEMENT.md  CONTAINER_ADAPTERS.md  Cargo.toml  EDGE_CASES_REVIEW.md  EXAMPLES_FIXES_FINAL.md  EXAMPLES_FIXES_SUMMARY.md  EXAMPLES_MIGRATION_STATUS.md  EXAMPLES_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  INTEROPERABILITY.md  KP_DERIVE_SUMMARY.md  LOCK_KP_GUIDE.md  MIGRATION.md  PANIC_ON_CLONE_IMPLEMENTATION.md  PANIC_ON_CLONE_TESTS.md  PROC_MACRO_LOCK_SUPPORT.md  RC_REFCELL_IMPLEMENTATION.md  README.md  REFERENCE_SUPPORT.md  SHALLOW_CLONING.md  SMART_POINTER_DEREF.md  TRAIT_BOUNDS_ANALYSIS.md  test_labeled_enum.rs
benches/: BENCHMARK_RESULTS.md  BENCHMARK_RESULTS_dynamic_dispatch.md  BENCHMARK_SUMMARY.md  PERFORMANCE_ANALYSIS.md  PERFORMANCE_ANALYSIS_optimization_phases.md  README.md  akp_cpu_bench.rs  deep_chain_async_only.rs  deep_chain_leaf.rs  deep_chain_sync_only.rs  keypath_vs_unwrap.rs  kp_plain_only.rs  rwlock_write_deeply_nested.rs  scale_par_bench.rs  ten_level_arc_rwlock.rs  ten_level_std_rwlock.rs  ten_level_tokio_rwlock.rs
examples/: add_operator.rs  advanced_query_builder.rs  akp_wgpu_runner.rs  all_containers_test.rs  arc_rwlock_aggregator_example.rs  arc_sync_aggregator_example.rs  arc_sync_derive_example.rs  attribute_scopes.rs  basic_containers_test.rs  basics.rs  basics_casepath.rs  basics_macros.rs  box_and_pin_example.rs  box_keypath.rs  change_tracker.rs  check_detection_kp.rs  complete_containers_no_clone_example.rs  complex_macros.rs  compose.rs  compose_macros.rs  comprehensive_containers.rs  comprehensive_edge_cases.rs  comprehensive_tagged_example.rs  comprehensive_test_suite.rs  container_adapter_test.rs  container_adapters.rs  container_edge_cases.rs  debug_box_option.rs  deep_nesting_composition_example.rs  deep_readable_composition_example.rs  deeply_nested_enum_arc_rwlock.rs  demonstrate_suggestion_macros.rs  derive_macros_new_features_example.rs  display_demo.rs  eg.rs  enum_casepaths_macros.rs  enum_keypath_example.rs  enum_keypath_macros.rs  failable.rs  failable_combined_example.rs  (+85 more)
key-paths-core/: Cargo.toml  README.md
key-paths-core/examples/: all_containers_no_clone_example.rs  basics.rs  complete_containers_no_clone_example.rs  compose.rs  container_adapter_test.rs  enum_keypath_example.rs  failable.rs  for_option_example.rs  no_clone_mutex_rwlock_example.rs  owned_keypaths.rs  owned_keypaths_test.rs  prism_compose.rs  prism_compose2.rs  readable_keypath_example.rs  reference_test.rs  simple_for_option_example.rs  simple_mutex_example.rs  writtable_keypath_example.rs
key-paths-core/src/: lib.rs
key-paths-derive/: Cargo.toml  README.md
key-paths-derive-bak/: Cargo.toml
key-paths-derive-bak/src/: lib.rs
key-paths-derive/src/: lib.rs
key-paths-derive/tests/: comprehensive_test.rs  derive_test.rs  enum_complex_test.rs  integration_test.rs  pin_project_test.rs  smart_pointer_deref_test.rs  wrapper_types_test.rs
key-paths-iter/: Cargo.toml  README.md  skills.md
key-paths-iter/src/: kp_gpu.rs  lib.rs  scale_par.rs  wgpu.rs
key-paths-macros/: Cargo.toml  README.md
key-paths-macros/src/: lib.rs
key-paths-macros/tests/: integration_test.rs
keypaths-core/: Cargo.toml
keypaths-core/src/: lib.rs
keypaths-proc/: Cargo.toml  README.md
keypaths-proc/src/: lib.rs
keypaths-proc/tests/: all_containers_test.rs  all_containers_test_kp.rs  integration_test.rs
rust-keypaths/: Cargo.toml  README.md
rust-keypaths/benches/: BENCHMARK_REPORT.md  deeply_nested.rs
rust-keypaths/examples/: containers.rs  deeply_nested.rs  kp_all_containers.rs  locks_and_tagged.rs  partial_and_any_keypaths.rs  writable_containers.rs
rust-keypaths/src/: lib.rs
src/: async_lock.rs  lib.rs  lock.rs
tests/: integration_async_lock.rs  integration_nine_nesting.rs  integration_pin_future.rs
