[package]
name = "rust-key-paths"
version = "1.18.0"
edition = "2024"
authors = ["Codefonsi <info@codefonsi.com>"]
license = "MPL-2.0"
description = "Keypaths for Rust: Static dispatch implementation (rust-keypaths) and legacy dynamic dispatch (key-paths-core). Type-safe, composable access to nested data structures."
repository = "https://github.com/codefonsi/rust-key-paths"
homepage = "https://github.com/codefonsi/rust-key-paths"
documentation = "https://docs.rs/rust-key-paths"
keywords = ["keypaths", "EnumKeyPath", "type-safe", "WritableKeyPath", "ReadableKeyPath"]
readme = "./README.md"
include = ["src/**/*", "Cargo.toml", "../../README.md", "LICENSE"]

[dependencies]
# Primary crates: rust-keypaths (static dispatch, faster) and keypaths-proc (proc macros)
rust-keypaths = { path = "rust-keypaths", version = "1.4.0", features = ["tagged_core", "parking_lot"] }
keypaths-proc = { path = "keypaths-proc", version = "1.4.0"}

# Legacy crates: key-paths-core 1.6.0 for dynamic dispatch, multithreaded needs
# Note: Use key-paths-core = "1.6.0" if you need dynamic dispatch or Send + Sync bounds
# key-paths-core = { path = "key-paths-core", version = "1.6.0", features = ["tagged_core"] }
# key-paths-derive = { path = "key-paths-derive", version = "1.1.0"}


[workspace]
resolver = "3" # or "3"
members = [
    "keypaths-proc",
    "rust-keypaths"
]

[patch.crates-io]
rust-keypaths = { path = "rust-keypaths" }
keypaths-proc = { path = "keypaths-proc" }

[features]
default = []
#parking_lot = ["rust-keypaths/parking_lot"]
#tagged_core = ["rust-keypaths/tagged_core"]

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
parking_lot = "0.12"
tagged-core = "0.8.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "keypath_vs_unwrap"
harness = false
