[package]
name = "rust-key-paths"
version = "1.20.0"
edition = "2024"
authors = ["Codefonsi <info@codefonsi.com>"]
license = "MPL-2.0"
description = "Keypaths for Rust: Static dispatch implementation (rust-keypaths) and legacy dynamic dispatch (key-paths-core). Type-safe, composable access to nested data structures."
repository = "https://github.com/codefonsi/rust-key-paths"
homepage = "https://github.com/codefonsi/rust-key-paths"
documentation = "https://docs.rs/rust-key-paths"
keywords = ["keypaths", "EnumKeyPath", "type-safe", "WritableKeyPath", "ReadableKeyPath"]
readme = "./README.md"
include = ["src/**/*", "Cargo.toml", "../../README.md", "LICENSE"]

[dependencies]
rust-keypaths = { path = "rust-keypaths", version = "1.6.0", features = ["tagged", "parking_lot", "tokio"] }
keypaths-proc = { path = "keypaths-proc", version = "1.6.0"}

[workspace]
resolver = "3" # or "3"
members = [
    "keypaths-proc",
    "rust-keypaths"
]

[patch.crates-io]
rust-keypaths = { path = "rust-keypaths" }
keypaths-proc = { path = "keypaths-proc" }

[features]
default = []
parking_lot = ["parking_lot/default"]
tagged_core = ["tagged-core/default"]
tokio = ["rust-keypaths/tokio"]

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
parking_lot = "0.12"
tagged-core = "0.8.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
criterion = { version = "0.5", features = ["html_reports"] }
tokio = { version = "1.38.0", features = ["sync", "rt", "rt-multi-thread", "macros"] }

[[bench]]
name = "keypath_vs_unwrap"
harness = false

[[bench]]
name = "rwlock_write_deeply_nested"
harness = false
