[package]
name = "key-paths-macros"
version = "1.1.0"
edition = "2021"
description = "Ergonomic keypath! macros for rust-key-paths (dot-notation keypath construction)"
license = "MPL-2.0"
authors = ["Codefonsi <info@codefonsi.com>"]
repository = "https://github.com/codefonsi/rust-key-paths"
homepage = "https://github.com/codefonsi/rust-key-paths"
documentation = "https://docs.rs/key-paths-macros"
keywords = ["keypaths", "macros", "type-safe"]
readme = "./README.md"
include = ["src/**/*", "Cargo.toml", "README.md"]

[lib]
# Declarative macros only; no proc-macro

[dev-dependencies]
rust-key-paths = { path = ".." }
key-paths-derive = { path = "../key-paths-derive" }
