[package]
name = "keypaths-proc"
version = "1.4.1"
edition = "2024"
description = "Proc-macro derive to generate keypath methods using rust-keypaths (static dispatch)"
license = "MIT OR Apache-2.0"
authors = ["Your Name <your.email@example.com>"]
repository = "https://github.com/akashsoni01/rust-key-paths"
homepage = "https://github.com/akashsoni01/rust-key-paths"
documentation = "https://docs.rs/keypaths-proc"
keywords = ["keypaths", "type-safe", "macros", "proc", "static-dispatch"]
readme = "./README.md"
include = ["src/**/*", "Cargo.toml", "README.md", "LICENSE"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }

[dev-dependencies]
rust-keypaths = { path = "../rust-keypaths", version = "1.4.1" }
