[package]
name = "rust-keypaths"
version = "1.0.4"
edition = "2024"
description = "A static dispatch, faster alternative to rust-key-paths - Type-safe, composable keypaths for Rust with superior performance"
authors = ["Your Name <your.email@example.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/akashsoni01/rust-key-paths"
keywords = ["keypath", "type-safe", "composable", "static-dispatch", "zero-cost"]
categories = ["data-structures"]

[dependencies]
tagged-core = { version = "1.0.1", optional = true }
parking_lot = { version = "0.12", optional = true }

[features]
default = []
tagged = ["dep:tagged-core"]
parking_lot = ["dep:parking_lot"]

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "deeply_nested"
harness = false
